Add the `Premain-Class` manifest attribute

--- a/src/test/gradle/build.gradle
+++ b/src/test/gradle/build.gradle
@@ -139,14 +139,15 @@ private void testContents(file, options) {
   def jm = f.manifest.mainAttributes
   assert jm.getValue('Application-Id') ==~ /com\.foo\.\w+/
   assert jm.getValue('Manifest-Version') != null
+  assert jm.getValue('Premain-Class') == 'Capsule'
   assert jm.getValue('Main-Class') == 'Capsule'
   assert jm.getValue('Application-Class') == 'com.foo.Main'
   if (options.fat) {
-    assert jm.size() == 4
+    assert jm.size() == 5
   } else if (options.maven) {
     assert jm.getValue('Dependencies') == 'junit:junit:4.11 org.apache.ant:ant:1.9.3(*:ant-launcher)'
     assert jm.getValue('Caplets') == 'MavenCapsule'
-    assert jm.size() == 6
+    assert jm.size() == 7
   }
 
 }
