--- a/src/test/gradle/build.gradle
+++ b/src/test/gradle/build.gradle
@@ -22,6 +22,11 @@ dependencies {
     exclude module: 'ant-launcher'
   }
   runtime 'junit:junit:4.11'
+
+  // I have no idea what these are,
+  // but they exercise the name collision bug
+  runtime 'com.sefford:commons:1.0.0', { exclude group: '*' }
+  runtime 'com.github.penggle:commons:1.0.0', { exclude group: '*' }
 }
 
 jar {
@@ -118,10 +123,12 @@ private void testContents(file, options) {
   projectFiles.sort()
   if (options.fat) {
     assert projectFiles == [
+        '1-commons-1.0.0.jar',
         'Capsule.class',
         'META-INF/',
         'META-INF/MANIFEST.MF',
         'ant-1.9.3.jar',
+        'commons-1.0.0.jar',
         'hamcrest-core-1.3.jar',
         'junit-4.11.jar',
         'test-project.jar',
@@ -145,7 +152,7 @@ private void testContents(file, options) {
   if (options.fat) {
     assert jm.size() == 5
   } else if (options.maven) {
-    assert jm.getValue('Dependencies') == 'junit:junit:4.11 org.apache.ant:ant:1.9.3(*:ant-launcher)'
+    assert jm.getValue('Dependencies') == 'com.github.penggle:commons:1.0.0(*:*) com.sefford:commons:1.0.0(*:*) junit:junit:4.11 org.apache.ant:ant:1.9.3(*:ant-launcher)'
     assert jm.getValue('Caplets') == 'MavenCapsule'
     assert jm.size() == 7
   }
