--- a/src/test/gradle/build.gradle
+++ b/src/test/gradle/build.gradle
@@ -18,6 +18,7 @@ repositories {
 }
 
 dependencies {
+  compile files('settings.gradle')
   compile('org.apache.ant:ant:1.9.3') {
     exclude module: 'ant-launcher'
   }
@@ -131,6 +132,7 @@ private void testContents(file, options) {
         'commons-1.0.0.jar',
         'hamcrest-core-1.3.jar',
         'junit-4.11.jar',
+        'settings.gradle',
         'test-project.jar',
     ]
   } else if (options.maven) {
@@ -139,6 +141,7 @@ private void testContents(file, options) {
         'META-INF/',
         'META-INF/MANIFEST.MF',
         'MavenCapsule.class',
+        'settings.gradle',
         'test-project.jar',
     ]
   }
