support for custom manifest entries

--- a/src/test/gradle/build.gradle
+++ b/src/test/gradle/build.gradle
@@ -78,6 +78,9 @@ task recreatedMavenCapsule(type: Capsule){
   capsuleManifest{
     dependencyConfiguration configurations.runtime
     caplets << 'MavenCapsule'
+    customEntries (
+            "GUI": "true"
+    )
   }
   buildTests(delegate, executable: false, maven: true)
 }
