--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ repositories {
 dependencies {
     compile gradleApi()
     compile localGroovy()
+    compile 'org.testng:testng:6.14.3'
 }
 
 task sourcesJar(type: Jar) {
