--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,11 @@
 plugins {
-  id "com.gradle.plugin-publish" version "0.9.2"
+  id 'java-gradle-plugin'
+  id 'groovy'
+  id 'maven'
+  id 'signing'
+  id 'idea'
+  id 'maven-publish'
 }
-
-apply plugin: 'groovy'
-apply plugin: 'maven'
-apply plugin: 'signing'
-apply plugin: 'idea'
 
 def project_description = """\
 A Gradle plugin utilizing Capsule, the packaging and deployment tool for JVM apps.
@@ -22,6 +22,8 @@ repositories {
 dependencies {
     compile gradleApi()
     compile localGroovy()
+    // https://mvnrepository.com/artifact/org.testng/testng
+    testCompile group: 'org.testng', name: 'testng', version: '6.10'
 }
 
 task sourcesJar(type: Jar) {
@@ -34,23 +36,13 @@ artifacts {
     archives sourcesJar
 }
 
-pluginBundle {
-  website = 'https://github.com/danthegoodman/gradle-capsule-plugin'
-  vcsUrl = 'https://github.com/danthegoodman/gradle-capsule-plugin.git'
-  description = project_description
-  tags = ['shade', 'fatjar', 'uberjar', 'onejar', 'capsule']
-
-  plugins {
-    capsulePlugin {
-      id = 'us.kirchmeier.capsule'
-      displayName = 'Gradle Capsule Plugin'
+gradlePlugin {
+    plugins {
+        capsulePlugin {
+            id = 'us.kirchmeier.capsule'
+            implementationClass = 'us.kirchmeier.capsule.CapsuleGradlePlugin'
+        }
     }
-  }
-
-  mavenCoordinates {
-    groupId = 'us.kirchmeier'
-    artifactId = "gradle-capsule-plugin"
-  }
 }
 
 test {
