--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,12 @@
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath "org.jfrog.buildinfo:build-info-extractor-gradle:latest.release"
+    }
+}
+
 plugins {
   id 'java-gradle-plugin'
   id 'groovy'
@@ -12,8 +21,8 @@ A Gradle plugin utilizing Capsule, the packaging and deployment tool for JVM app
 (http://www.capsule.io)
 """
 
-sourceCompatibility = 1.6
-targetCompatibility = 1.6
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 repositories {
     jcenter()
@@ -22,7 +31,6 @@ repositories {
 dependencies {
     compile gradleApi()
     compile localGroovy()
-    // https://mvnrepository.com/artifact/org.testng/testng
     testCompile group: 'org.testng', name: 'testng', version: '6.10'
 }
 
@@ -47,4 +55,55 @@ gradlePlugin {
 
 test {
     useTestNG()
+}
+
+def publishedProjects = projects.project
+
+configure(publishedProjects) { subproject ->
+    apply plugin: 'java'
+    apply plugin: 'maven-publish'
+    apply plugin: 'com.jfrog.artifactory'
+
+    task sourceJar(type: Jar, dependsOn: subproject.classes) {
+        classifier = 'sources'
+        from sourceSets.main.allSource
+    }
+
+    publishing {
+        publications {
+            create(subproject.name, MavenPublication) {
+
+                if (subproject.hasProperty("mavenArtifacts")) {
+                    subproject.mavenArtifacts.call(it)
+                } else {
+                    from components.java
+                }
+
+                groupId subproject.group
+                artifactId subproject.name
+                artifact tasks.sourceJar
+
+                pom {
+                    name = subproject.name
+                    packaging = 'jar'
+                    description = subproject.description
+                }
+            }
+        }
+    }
+}
+
+artifactory {
+    publish {
+        contextUrl = 'https://ci-artifactory.corda.r3cev.com/artifactory'
+        repository {
+            repoKey = 'corda-dev'
+            username = System.getenv('CORDA_ARTIFACTORY_USERNAME') ?: System.getProperty('corda.artifactory.username')
+            password = System.getenv('CORDA_ARTIFACTORY_PASSWORD') ?: System.getProperty('corda.artifactory.password')
+        }
+
+        defaults {
+            publications(project.name)
+        }
+    }
 }
