Re-instate evaluate.

--- a/src/test/gradle/build.gradle
+++ b/src/test/gradle/build.gradle
@@ -93,8 +93,7 @@ project('subproject') {
 
 task runScript() {
   if(!project.hasProperty('testScript')) throw new Exception("Missing -PtestScript=...")
-  println("RUN SCRIPT: ${project.property('testScript')}")
-//  evaluate(new File(project.property('testScript')))
+  evaluate(new File(project.property('testScript')))
 }
 
 def buildAllTask = task('buildAll')
